language/move-lang/tests/move_check/typing/subtype_annotation_invalid.exp
error: 

   ┌── tests/move_check/typing/subtype_annotation_invalid.move:5:10 ───
   │
 5 │         (&0: &mut u64);
   │              ^^^^^^^^ Invalid type annotation
   ·
 5 │         (&0: &mut u64);
   │          -- The type: '&{integer}'
   ·
 5 │         (&0: &mut u64);
   │              -------- Is not a subtype of: '&mut u64'
   │

error: 

   ┌── tests/move_check/typing/subtype_annotation_invalid.move:9:11 ───
   │
 9 │         ((&0, &0): (&mut u64, &mut u64));
   │                    ^^^^^^^^^^^^^^^^^^^^ Invalid type annotation
   ·
 9 │         ((&0, &0): (&mut u64, &mut u64));
   │           -- The type: '&{integer}'
   ·
 9 │         ((&0, &0): (&mut u64, &mut u64));
   │                     -------- Is not a subtype of: '&mut u64'
   │

error: 

    ┌── tests/move_check/typing/subtype_annotation_invalid.move:10:11 ───
    │
 10 │         ((&0, &0): (&mut u64, &u64));
    │                    ^^^^^^^^^^^^^^^^ Invalid type annotation
    ·
 10 │         ((&0, &0): (&mut u64, &u64));
    │           -- The type: '&{integer}'
    ·
 10 │         ((&0, &0): (&mut u64, &u64));
    │                     -------- Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_annotation_invalid.move:11:15 ───
    │
 11 │         ((&0, &0): (&u64, &mut u64));
    │                    ^^^^^^^^^^^^^^^^ Invalid type annotation
    ·
 11 │         ((&0, &0): (&u64, &mut u64));
    │               -- The type: '&{integer}'
    ·
 11 │         ((&0, &0): (&u64, &mut u64));
    │                           -------- Is not a subtype of: '&mut u64'
    │

